--- a/package.json
+++ b/package.json
@@ -3,11 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bomdi/codebox": "^1.0.10",
+    "@chakra-ui/core": "^0.8.0",
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.5.0",
+    "@editorjs/image": "^2.5.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.2.1",
+    "@editorjs/list": "^1.5.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.7.0",
+    "@editorjs/quote": "^2.3.0",
+    "@editorjs/raw": "^2.1.2",
+    "@editorjs/simple-image": "^1.3.3",
+    "@editorjs/table": "^1.2.2",
+    "@editorjs/warning": "^1.1.1",
+    "@emotion/core": "^10.0.34",
+    "@emotion/styled": "^10.0.27",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "editorjs-react-renderer": "^2.3.6",
+    "emotion-theming": "^10.0.27",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-editor-js": "^1.6.2",
+    "react-query": "^2.5.14",
+    "react-query-devtools": "^2.4.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
