--- a/package.json
+++ b/package.json
@@ -24,19 +24,32 @@
     "@editorjs/warning": "^1.1.1",
     "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
+    "@fec/remark-a11y-emoji": "^1.0.0",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.15.0",
     "editorjs-react-renderer": "^2.3.6",
     "emotion-theming": "^10.0.27",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-editor-js": "^1.6.2",
+    "react-icons": "^3.10.0",
+    "react-paginate": "^6.3.2",
     "react-query": "^2.5.14",
     "react-query-devtools": "^2.4.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-textarea-autosize": "^8.2.0",
+    "rehype-highlight": "^4.0.0",
+    "rehype-sanitize": "^3.0.1",
+    "rehype-stringify": "^8.0.0",
+    "remark": "^12.0.1",
+    "remark-emoji": "^2.1.0",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^12.0.0",
+    "remark-rehype": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
