--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^2.15.0",
     "editorjs-react-renderer": "^2.3.6",
     "emotion-theming": "^10.0.27",
+    "html-metadata": "^1.7.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
