--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@bomdi/codebox": "^1.0.10",
     "@chakra-ui/core": "^0.8.0",
     "@editorjs/checklist": "^1.1.0",
-    "@editorjs/code": "^2.5.0",
     "@editorjs/delimiter": "^1.1.0",
     "@editorjs/editorjs": "^2.18.0",
     "@editorjs/embed": "^2.3.1",
@@ -18,13 +17,10 @@
     "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.7.0",
     "@editorjs/quote": "^2.3.0",
-    "@editorjs/raw": "^2.1.2",
-    "@editorjs/simple-image": "^1.3.3",
     "@editorjs/table": "^1.2.2",
     "@editorjs/warning": "^1.1.1",
     "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
-    "@fec/remark-a11y-emoji": "^1.0.0",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -38,7 +34,6 @@
     "react-dom": "^16.13.1",
     "react-editor-js": "^1.6.2",
     "react-icons": "^3.10.0",
-    "react-paginate": "^6.3.2",
     "react-query": "^2.5.14",
     "react-query-devtools": "^2.4.2",
     "react-scripts": "3.4.3",
@@ -48,8 +43,6 @@
     "rehype-stringify": "^8.0.0",
     "remark": "^12.0.1",
     "remark-emoji": "^2.1.0",
-    "remark-highlight.js": "^6.0.0",
-    "remark-html": "^12.0.0",
     "remark-rehype": "^7.0.0"
   },
   "scripts": {
@@ -72,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "debug": "^4.1.1"
   }
 }
