--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "emotion-theming": "^10.0.27",
     "html-metadata": "^1.7.1",
     "lodash": "^4.17.20",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-editor-js": "^1.6.2",
