--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "editorjs-react-renderer": "^2.3.6",
     "emotion-theming": "^10.0.27",
     "html-metadata": "^1.7.1",
+    "http-proxy": "^1.18.1",
     "lodash": "^4.17.20",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
