--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix src/**/*.{js,ts,tsx} && prettier --ignore-path .gitignore --write ./"
+    "lint": "eslint --fix src/**/*.{js,ts,tsx} && prettier --ignore-path .gitignore --write ."
   },
   "lint-staged": {
     "*.{js,css,json}": "prettier --check",
