--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "react-scripts": "3.4.3",
     "react-textarea-autosize": "^8.2.0",
     "rehype-highlight": "^4.0.0",
+    "rehype-katex": "^4.0.0",
     "rehype-sanitize": "^4.0.0",
     "rehype-stringify": "^8.0.0",
     "remark": "^12.0.1",
     "remark-emoji": "^2.1.0",
+    "remark-math": "^3.0.1",
     "remark-rehype": "^7.0.0"
   },
   "scripts": {
