--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^12.1.3",
     "date-fns": "^2.15.0",
     "editorjs-react-renderer": "^2.3.6",
+    "emoji-mart": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "html-metadata": "^1.7.1",
     "http-proxy": "^1.18.1",
@@ -46,7 +47,8 @@
     "remark": "^12.0.1",
     "remark-emoji": "^2.1.0",
     "remark-math": "^3.0.1",
-    "remark-rehype": "^7.0.0"
+    "remark-rehype": "^7.0.0",
+    "remount": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
