--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-editor-js": "^1.6.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^3.11.0",
     "react-query": "^2.12.1",
     "react-query-devtools": "^2.4.4",
