--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix src/**/*.{js,ts,tsx} && prettier --ignore-path .gitignore --write .",
-    "archive": "git archive -o code.zip --format zip HEAD"
+    "archive": "git archive -o code.zip --format zip HEAD",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "lint-staged": {
     "*.{js,css,json}": "prettier --check",
@@ -90,6 +91,7 @@
     "debug": "^4.1.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "source-map-explorer": "^2.5.0"
   }
 }
