--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
+    "axios": "^0.20.0",
     "date-fns": "^2.16.0",
     "editorjs-react-renderer": "^2.3.6",
     "emotion-theming": "^10.0.27",
